--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		    Technology
 	    </title>
     </head>
-	<body bgcolor="nigger">
+	<body bgcolor="yellow">
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
