--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
+		<img src="https://www.google.com/search?q=naruto&safe=active&sa=X&rlz=1C1GCEA_enNZ845NZ845&biw=1920&bih=937&tbm=isch&source=iu&ictx=1&fir=8EoJhgCyc-eLmM%253A%252CWdjV5wKAFZeaKM%252C%252Fm%252F01hryy&vet=1&usg=AI4_-kQ9ycctqgPa4mmFWYLGKTwHeo2F9A&ved=2ahUKEwjOj5CFqsfjAhUv6XMBHSOjCAIQ_B0wHHoECAgQAw#imgrc=8EoJhgCyc-eLmM:"
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
