--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
-		<img src="https://www.google.com/search?q=naruto&safe=active&sa=X&rlz=1C1GCEA_enNZ845NZ845&biw=1920&bih=937&tbm=isch&source=iu&ictx=1&fir=8EoJhgCyc-eLmM%253A%252CWdjV5wKAFZeaKM%252C%252Fm%252F01hryy&vet=1&usg=AI4_-kQ9ycctqgPa4mmFWYLGKTwHeo2F9A&ved=2ahUKEwjOj5CFqsfjAhUv6XMBHSOjCAIQ_B0wHHoECAgQAw#imgrc=8EoJhgCyc-eLmM:"
+		<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjGt4DltsfjAhWMuY8KHYnaCXkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.viz.com%2Fnaruto&psig=AOvVaw2zkkIwan1nIUVgPxiMHkIJ&ust=1563847159396090" alt="Naruto" height=300 length=400>
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
