--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
-		<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjGt4DltsfjAhWMuY8KHYnaCXkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.viz.com%2Fnaruto&psig=AOvVaw2zkkIwan1nIUVgPxiMHkIJ&ust=1563847159396090" alt="Naruto" height=300 length=400>
+		<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjGt4DltsfjAhWMuY8KHYnaCXkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.viz.com%2Fnaruto&psig=AOvVaw2zkkIwan1nIUVgPxiMHkIJ&ust=1563847159396090">
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
