--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
-		<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjGt4DltsfjAhWMuY8KHYnaCXkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.viz.com%2Fnaruto&psig=AOvVaw2zkkIwan1nIUVgPxiMHkIJ&ust=1563847159396090">
+		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png">
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
