--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
-		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png">
+		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=300 lenght=400 >
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
