--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		    Technology
 	    </title>
     </head>
-	<body bgcolor="lightblue">
-		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 lenght=400 >
+	<body bgcolor="yellow">
+		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 length=400 >
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
