--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
+		<NAV>
+			Jutsus
+		</NAV>
 		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 length=400 >
 	   <p>
 	        The metal alloy thing was fun.
