--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     </head>
 	<body bgcolor="yellow">
 		<NAV>
-			Jutsus
+			Characters
 		</NAV>
 		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 length=400 >
+		<FOOTER>
+			Naruto Uzumaki
+		</FOOTER>
 	   <p>
 	        The metal alloy thing was fun.
 	   </p>
