--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			Characters
 		</NAV>
 		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 length=400 >
+		<img src="https://vignette.wikia.nocookie.net/villains/images/f/f5/Uchiha_sasuke_ms_attakc_alt_by_katakitsu-d66ducb.png/revision/latest?cb=20170927044910" height=400 length=400 >
 		<FOOTER>
 			Naruto Uzumaki
 		</FOOTER>
