--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 		<img src="https://vignette.wikia.nocookie.net/villains/images/f/f5/Uchiha_sasuke_ms_attakc_alt_by_katakitsu-d66ducb.png/revision/latest?cb=20170927044910" height=400 length=400 >
 		<FOOTER>
 			Naruto Uzumaki
+			
+			
 			Sasuke Uchiha
 		</FOOTER>
 	   <p>
-	        The metal alloy thing was fun.
+	        The metal alloy thing was fun
 	   </p>
 	   <p>
 	       It was fun learning how to make a website.
