--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			Sasuke Uchiha
 		</FOOTER>
 	   <p>
-	        The metal alloy thing was fun
+	        The metal alloy thing was fun.
 	   </p>
 	   <p>
 	       It was fun learning how to make a website.
