--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
 	<body bgcolor="yellow">
 		<NAV>
-			Characters
+		<ul>
+			<li><a href="https://en.wikipedia.org/wiki/Naruto"> click here to go to Naruto wiki page </a></li>
 		</NAV>
 		<img src="https://archive.is/kJCS4/7351756d55fdcb039455c2c4ef241b49142414cf.png" height=400 length=400 >
 		<img src="https://vignette.wikia.nocookie.net/villains/images/f/f5/Uchiha_sasuke_ms_attakc_alt_by_katakitsu-d66ducb.png/revision/latest?cb=20170927044910" height=400 length=400 >
