--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	    </title>
     </head>
 	<body bgcolor="yellow">
+	  <p>
+		  Team 7
+          </p>
 		<NAV>
 		<ul>
 			<li><a href="https://en.wikipedia.org/wiki/Naruto"> click here to go to Naruto wiki page </a></li>
